# meat-quality-assessment

./: .dockerignore  .env.example  .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Makefile  README.md  kaggle.json.example  pyproject.toml
containers/: Dockerfile
docs/: LINKS.md
notebooks/: 1-eda.ipynb  2-training.ipynb  3-predict.ipynb  README.md
src/: __version__.py
src/base/: analysis.py  model.py  pipelines.py  utilities.py
src/scripts/: download_data.py
src/serving_api/: app.py  config.py
