[tool.poetry]
name = "meat-quality-assessment"
version = "0.1.0"
description = "Deep Learning model to assess the quality of red meat based on sample photos."
authors = ["Roberto Fierimonte <roberto.fierimonte@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9.7,<3.11"
opendatasets = "^0.1.22"
numpy = "^1.23.4"
pre-commit = "^2.20.0"
commitizen = "^2.37.0"
loguru = "^0.6.0"
ipykernel = "^6.17.0"
imageio = "^2.22.3"
seaborn = "^0.12.1"
tensorflow = "^2.10.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
