[tool.commitizen]
name = "cz_conventional_commits"
version = "0.1.0"
tag_format = "v$major.$minor.$patch"
update_changelog_on_bump = true
version_files = [
    "pyproject.toml:version",
    "src/__version__.py"
]

[tool.poetry]
name = "meat-quality-assessment"
version = "0.1.0"
description = "Deep Learning model to assess the quality of red meat based on sample photos."
authors = ["Roberto Fierimonte <roberto.fierimonte@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9.7,<3.11"
opendatasets = "^0.1.22"
numpy = "^1.23.4"
loguru = "^0.6.0"
tensorflow = "^2.10.0"
pillow = "^9.3.0"
joblib = "^1.2.0"
scikit-learn = "^1.1.3"
fastapi = "^0.86.0"
uvicorn = "^0.19.0"
gunicorn = "^20.1.0"
python-multipart = "^0.0.5"
pandas = "^1.5.1"

[tool.poetry.group.dev.dependencies]
pre-commit = "^2.20.0"
commitizen = "^2.37.0"
black = {version = "^22.10.0", allow-prereleases = true}
ipykernel = "^6.17.0"
seaborn = "^0.12.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
